--- a/MiraiConsultMVC/Views/Home/topics.cshtml
+++ b/MiraiConsultMVC/Views/Home/topics.cshtml
@@ -13,6 +13,7 @@
 
 <link href="../Content/tokenfield-typeahead.css" rel="stylesheet" />
 <link href="../Content/bootstrap-tokenfield.css" rel="stylesheet" />
+<link href="../Content/TagClasses.css" rel="stylesheet"/>
 <link href="../Content/less/tokenfield-typeahead.less"></link>
 <link href="../Content/less/bootstrap-tokenfield.less"></link>
 <link href="../Content/custom.css" rel="stylesheet" />
@@ -28,30 +29,36 @@
             <div class="row-fluid">
                     <div class="span12">
                         <div class="control-group" id="divTags">
-                            @{
-                                new TagCloud.TagCloud(new Dictionary<string, int>
+                            <p class="tagcloud">
+                                @foreach (var t in Model)
                                 {
-                                    {"C#", 58},
-                                    {"asp.net", 45},
-                                    {"vb.net", 36},
-                                    {"ajax", 24},
-                                    {"linq", 13},
-                                },
-                                new TagCloud.TagCloudGenerationRules
-                                {
-                                    Order = TagCloud.TagCloudOrder.WeightDescending,
-                                    TagToolTipFormatString = "Questions asked {0}",
-                                    TagUrlFormatString = "/topics/"
-                                });
-                            }
-                        </div>
+                                    <a href='@(t.NavigateUrl)' class='@(t.CssClass)' title='@(t.ToolTip + " "+t.TagWeight)'>@t.Text</a>
+                                }
+                            </p>
+                                @*@{
+                new TagCloud.TagCloud(new Dictionary<string, int>
+                {
+                    {"C#", 58},
+                    {"asp.net", 45},
+                    {"vb.net", 36},
+                    {"ajax", 24},
+                    {"linq", 13}
+                },
+                new TagCloud.TagCloudGenerationRules
+                {
+                    Order = TagCloud.TagCloudOrder.WeightDescending,
+                    TagToolTipFormatString = "Questions asked {0}",
+                    TagUrlFormatString = "/topics/"
+                });
+            }*@
                     </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 <script type="text/javascript">
-    var tags = '';
+   /* var tags = '';
     $(function () {
         $(".navigation li.active").removeClass("active");
         $('#liManageTags').addClass("active");
@@ -187,7 +194,7 @@
             }
             $('#tokenfield-typeahead').tokenfield('setTokens', filterTags);
         }
-    });
+    });*/
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
             (i[r].q = i[r].q || []).push(arguments)
