changes in url name

--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -57,7 +57,7 @@
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("termsofuse") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Contact")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("HowWeWorks") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("HowWeWorks")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("forgotpassword") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("topics")
-                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Answers  "))
+                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("answers"))
 
                                     {
                                         <div class="pull-right">
