committing changes tag cloud removing extra file

--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -34,7 +34,7 @@
             <div class="span12">
                 <div>
                     <p class="div-title-firstp div-details-margin-left">
-                        Do you have any health related 2questions?
+                        Do you have any health related questions?
                     </p>
                     <p class="div-title-firsts div-details-margin-left">Ask a Doctor</p>
                     <p class="div-title-firstp div-details-margin-left">
