--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
-    @*<title>Mirai Consult ™ </title>*@
+    <title>Mirai Consult ™ </title>
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link rel="stylesheet" href="~/Scripts/google-code-prettify/prettify.css" />
     <link rel="stylesheet" href="~/Content/font-awesome.min.css" />
