--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -192,7 +192,7 @@
                     if (session != null && session == 2)
                         window.location.href = "../Patients/AskDoctor?question=" + x.value;
                     else
-                        window.location.href = "../Patients/similarQuestions?question=" + x.value;
+                        window.location.href = "../similar-questions?question=" + x.value;
                     return false;
                 }
                 return true;
