--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -140,7 +140,7 @@
                                                     </a>
                                                 </li>
                                                 <li id="liDocQuestions">
-                                                    <a href="/Questions">
+                                                    <a href="/questions">
                                                         <span class="Icon Icon--questions Icon--large" id="questionSpan"></span>
                                                         @if (Convert.ToInt32(@Session["UnQuestionCount"]) != 0)
                                                         {
