--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -50,7 +50,7 @@
                                     if (HttpContext.Current.Request.Url.AbsoluteUri.Contains("patient-signup") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("doctor-signup")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Verifyemail") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Reset-Password")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("patientquestiondetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("find-doctors")
-                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("questiondetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("similar-Questions")
+                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("questiondetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("similar-questions")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("forgot-password") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("answers"))
                                         {
                                             <div class="pull-right">
@@ -162,15 +162,15 @@
                                             <ul class="dropdown-menu pull-right">
                                                  @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                                                 {
-                                                <li><a href="/Doctor-Profile"><i class="icon-user"></i>My Profile</a></li>
-                                                <li><a href="/Questions"><i class="icon-list-alt"></i>My Account</a></li>
-                                                <li><a href="/Change-password"><i class="icon-key"></i>Change Password</a></li>
+                                                <li><a href="/doctor-profile"><i class="icon-user"></i>My Profile</a></li>
+                                                <li><a href="/questions"><i class="icon-list-alt"></i>My Account</a></li>
+                                                <li><a href="/change-password"><i class="icon-key"></i>Change Password</a></li>
                                                 }
                                                 else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
                                                 {
                                                 <li><a href="/patient-profile"><i class="icon-user"></i>My Profile</a></li>
                                                 <li><a href="/answers"><i class="icon-list-alt"></i>My Account</a></li>
-                                                <li><a href="/Change-password"><i class="icon-key"></i>Change Password</a></li>
+                                                <li><a href="/change-password"><i class="icon-key"></i>Change Password</a></li>
                                                 }
                                                 else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.SuperAdmin))
                                                 {
