modified RouteConfig.cs and other cshtml files

--- a/MiraiConsultMVC/Views/Questions/_DoctorQuestionList.cshtml
+++ b/MiraiConsultMVC/Views/Questions/_DoctorQuestionList.cshtml
@@ -37,7 +37,7 @@
                         </div>
                         <div class='custom-middle middle-size-padding question-padding' style='width:80%; word-break:break-all'>
                             @*<a class='question_text' href='doctorquestiondetails.aspx?questionid=<%= question.QuestionId%>'>*@
-                            <a class='question_text' href='../Questions/@(question.QuestionId)'>
+                            <a class='question_text' href='/questions/@(question.QuestionId)'>
                                 @question.QuestionText
                             </a>
                         </div>
