--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -168,7 +168,7 @@
                                                     </a>
                                                 </li>
                                                 <li id="liReports">
-                                                    <a href="/report">
+                                                    <a href="/reports">
                                                         <span class="Icon Icon--reports Icon--large" id="reports" style="margin-top: 11px;"></span><span class="text"><br />Reports</span>
                                                     </a>
                                                 </li>
@@ -223,7 +223,7 @@
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li class="find-doctors">
-                                        <a href="/Home/find-doctors" class="menu-padding  reg-menu-padding">
+                                        <a href="/Home/finddoctors" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--find-doctor Icon--large"></span> <span class="text font-bold menutext-margin-top"> Find a Doctor</span>
                                         </a>
                                     </li>
