Commiting modified files

--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -230,7 +230,7 @@
                         <ul class="pull-right menu-top-margin" style="float:left;">
                             <li class="menu-style"> <a href="http://www.miraihealth.com" target="_blank" class="topmenu-links"> Who we are</a></li>
                             <li class="menu-style"><a href="@Url.Action("HowWeWorks","Home")" class="topmenu-links menu-padding-top" style="width:100%"> How we work</a></li>
-                            <li class="menu-style"><a href="~/patient/finddoctor.aspx" class="topmenu-links menu-padding-top"> Our Doctors</a></li>
+                            <li class="menu-style"><a href="/find-doctor" class="topmenu-links menu-padding-top"> Our Doctors</a></li>
                         </ul>
                     </div>
                 </div>
