--- a/MiraiConsultMVC/Views/Shared/_AutoCompleteSearch.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AutoCompleteSearch.cshtml
@@ -47,7 +47,7 @@
                 if (session != null && session == 2)
                     window.location.href = "../Patients/AskDoctor?question=" + x.value;
                 else
-                    window.location.href = "/similar-Questions/" + x.value;
+                    window.location.href = "/similar-questions/" + x.value;
                 return false;
             }
             return true;
