--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -284,7 +284,7 @@
                                                 <a class="edit hand-cursor" href=""><img alt="edit" class="cust-icon" src="../Content/image/edit2.png" /></a>
                                             </td>
                                             <td class="last-row">
-                                                <a class="delete hand-cursor" id="Cancel" href="doctorprofile.aspx"><img alt="delete" class="cust-icon" src="../Content/image/bin-1.png" /></a>
+                                                <a class="delete hand-cursor" id="Cancel" href="doctor-profile"><img alt="delete" class="cust-icon" src="../Content/image/bin-1.png" /></a>
                                             </td>
                                         </tr>
                                     }
