--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -131,7 +131,7 @@
                                     }
                                     else if (HttpContext.Current.Request.Url.AbsoluteUri.Contains("login") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("/Home/Contact"))
                                     {
-                                        <div class="pull-right">
+                                        <div class="pull-right menu-padding-bottom">
                                             <ul class="nav">
                                                 <li class="dropdown">
                                                     <a href="#" class="dropdown-toggle menu-padding" data-toggle="dropdown">New to Mirai Consult&#8482;? <b><u>Signup</u></b> here<b class="caret"></b></a>
@@ -230,7 +230,7 @@
                         <ul class="pull-right menu-top-margin" style="float:left;">
                             <li class="menu-style"> <a href="http://www.miraihealth.com" target="_blank" class="topmenu-links"> Who we are</a></li>
                             <li class="menu-style"><a href="@Url.Action("HowWeWorks","Home")" class="topmenu-links menu-padding-top" style="width:100%"> How we work</a></li>
-                            <li class="menu-style"><a href="/find-doctor" class="topmenu-links menu-padding-top"> Our Doctors</a></li>
+                            <li class="menu-style"><a href="/find-doctors" class="topmenu-links menu-padding-top"> Our Doctors</a></li>
                         </ul>
                     </div>
                 </div>
